--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="sign_up"><u>Sign Up</u></string>
     <string name="forgot_password"><u>Forgot Password</u></string>
     <string name="sign_in"><u>Sign In</u></string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
